--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,11 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
-    ]
+    ],
+    "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'none'; script-src 'self' https://vercel.live; style-src 'self';"
+        }
+    
   }
