--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'none'; script-src 'self' https://vercel.live; style-src 'self';"
+          "value": "default-src 'self'; script-src 'self' https://vercel.live; style-src 'self';"
         }
     
   }
